Removes HttpModule and uses RoutedContentEvent instead

--- a/src/JOS.Epi.ContentApi/JOS.Epi.ContentApi.nuspec
+++ b/src/JOS.Epi.ContentApi/JOS.Epi.ContentApi.nuspec
@@ -8,12 +8,8 @@
     <language>en-US</language>
     <projectUrl>https://github.com/joseftw/JOS.Epi.ContentApi</projectUrl>
     <releaseNotes>
-      Changes target framework to 4.6.1
+      Removes HttpModule
     </releaseNotes>
     <tags>episerver json serialize headless</tags>
   </metadata>
-  <files>
-    <file src="web.config.install.xdt" target="content\web.config.install.xdt"/>
-    <file src="web.config.uninstall.xdt" target="content\web.config.uninstall.xdt"/>
-  </files>
 </package>
